# libIDD

./: CMakeLists.txt  README.md  toolchain.arm.cmake
src/Invn/: IDDVersion.h
src/Invn/Devices/: Device.h  DeviceIcm20948.c  DeviceIcm20948.h  HostSerif.c  HostSerif.h  Sensor.c  SensorConfig.h  SensorTypes.h  SerifHal.h  VSensorId.c  VSensorId.h
src/Invn/Devices/Drivers/Icm20948/: Icm20948.h  Icm20948AuxCompassAkm.c  Icm20948DataBaseDriver.c  Icm20948DataConverter.c  Icm20948Defs.h  Icm20948Dmp3Driver.c  Icm20948Dmp3Driver.h  Icm20948MPUFifoControl.c  Icm20948MPUFifoControl.h  Icm20948SelfTest.c  Icm20948SelfTest.h  Icm20948Serif.h  Icm20948Setup.c  Icm20948Setup.h  Icm20948Transport.c  Icm20948Transport.h
src/Invn/DynamicProtocol/: DynProtocol.c  DynProtocol.h  DynProtocolTransport.h  DynProtocolTransportUart.c  DynProtocolTransportUart.h
